--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,30 @@
 	</parent>
 
 	<artifactId>gen-tree</artifactId>
-	<version>4.4.0</version>
+	<version>4.6.0</version>
+
+	<name>${project.artifactId}</name>
+
+	<description>
+		Project that holds a generic model for tree objects
+	</description>
+
+	<url>https://github.com/lightblueseas/gen-tree</url>
+
+	<scm>
+		<connection>scm:git:git:@github.com:lightblueseas/gen-tree.git</connection>
+		<developerConnection>scm:git:git@github.com:lightblueseas/gen-tree.git</developerConnection>
+		<url>git:@github.com:lightblueseas/gen-tree.git</url>
+	</scm>
+
+	<ciManagement>
+		<system>travis-ci</system>
+		<url>https://travis-ci.org/lightblueseas/gen-tree</url>
+	</ciManagement>
+
+	<issueManagement>
+		<system>github</system>
+		<url>https://github.com/lightblueseas/gen-tree/issues</url>
+	</issueManagement>
 
 </project>
