--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>de.alpharogroup</groupId>
 		<artifactId>mvn-java-parent</artifactId>
-		<version>2.24.0</version>
+		<version>2.25.0-SNAPSHOT</version>
 		<relativePath></relativePath>
 	</parent>
 
 	<artifactId>gen-tree</artifactId>
-	<version>4.10.0</version>
+	<version>4.11.0-SNAPSHOT</version>
 
 	<name>${project.artifactId}</name>
 
