--- a/pom.xml
+++ b/pom.xml
@@ -5,19 +5,19 @@
 	<parent>
 		<groupId>de.alpharogroup</groupId>
 		<artifactId>mvn-java-parent</artifactId>
-		<version>3.4.0</version>
+		<version>3.12</version>
 		<relativePath></relativePath>
 	</parent>
 
 	<artifactId>gen-tree</artifactId>
-	<version>4.11.0-SNAPSHOT</version>
+	<version>4.11-SNAPSHOT</version>
 
 	<name>${project.artifactId}</name>
 
 	<description>
 		Project that holds a generic model for tree objects
 	</description>
-	
+
 	<licenses>
 		<license>
 			<name>MIT License</name>
@@ -27,6 +27,14 @@
 	</licenses>
 
 	<url>https://github.com/lightblueseas/gen-tree</url>
+
+	<properties>
+		<!-- JOBJECT-EXTENSIONS version -->
+		<jobject-extensions.version>1.11</jobject-extensions.version>
+		<jobject-evaluate.version>${jobject-extensions.version}</jobject-evaluate.version>
+		<!-- TEST-OBJECTS version -->
+		<test-objects.version>4.28</test-objects.version>
+	</properties>
 
 	<scm>
 		<connection>scm:git:git:@github.com:lightblueseas/gen-tree.git</connection>
@@ -43,5 +51,158 @@
 		<system>github</system>
 		<url>https://github.com/lightblueseas/gen-tree/issues</url>
 	</issueManagement>
+
+	<dependencyManagement>
+
+		<dependencies>
+
+			<!-- JOBJECT-EVALUATE DEPENDENCY -->
+			<dependency>
+				<groupId>de.alpharogroup</groupId>
+				<artifactId>jobject-evaluate</artifactId>
+				<version>${jobject-evaluate.version}</version>
+			</dependency>
+			<!-- TEST-OBJECTS DEPENDENCY -->
+			<dependency>
+				<groupId>de.alpharogroup</groupId>
+				<artifactId>test-objects</artifactId>
+				<version>${test-objects.version}</version>
+			</dependency>
+
+		</dependencies>
+
+	</dependencyManagement>
+
+	<dependencies>
+
+		<!-- MEANBEAN DEPENDENCY -->
+		<dependency>
+			<groupId>org.meanbean</groupId>
+			<artifactId>meanbean</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- JOBJECT-EVALUATE DEPENDENCY -->
+		<dependency>
+			<groupId>de.alpharogroup</groupId>
+			<artifactId>jobject-evaluate</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>de.alpharogroup</groupId>
+			<artifactId>test-objects</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+	</dependencies>
+
+	<build>
+
+		<resources>
+
+			<resource>
+				<filtering>false</filtering>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**</include>
+				</includes>
+				<excludes>
+					<exclude>**/*.java</exclude>
+					<exclude>**/package.html</exclude>
+				</excludes>
+			</resource>
+
+			<resource>
+				<filtering>false</filtering>
+				<directory>src/main/resources</directory>
+			</resource>
+
+			<resource>
+				<filtering>false</filtering>
+				<directory>src/site</directory>
+			</resource>
+
+		</resources>
+
+		<testResources>
+
+			<testResource>
+				<filtering>false</filtering>
+				<directory>src/test/java</directory>
+				<includes>
+					<include>**</include>
+				</includes>
+				<excludes>
+					<exclude>**/*.java</exclude>
+					<exclude>**/package.html</exclude>
+				</excludes>
+			</testResource>
+			<testResource>
+				<filtering>false</filtering>
+				<directory>src/test/resources</directory>
+			</testResource>
+
+		</testResources>
+
+		<pluginManagement>
+
+			<plugins>
+
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>cobertura-maven-plugin</artifactId>
+					<configuration>
+						<instrumentation>
+							<excludes>
+								<!-- abstract classes -->
+								<!-- annotations -->
+								<!-- enums -->
+								<!-- beans -->
+								<!-- exceptions -->
+								<!-- interfaces -->
+								<exclude>de/alpharogroup/tree/ifaces/**/*.class</exclude>
+								<!-- deprecated classes -->
+								<!-- constant classes with only constants -->
+								<!-- explicit abstract classes -->
+								<!-- explicit annotations -->
+								<!-- explicit bean classes -->
+								<!-- explicit constant classes with only constants -->
+								<!-- explicit delegation classes -->
+								<!-- explicit deprecated classes -->
+								<!-- explicit enums -->
+								<!-- explicit exceptions -->
+								<!-- explicit interfaces -->
+							</excludes>
+						</instrumentation>
+					</configuration>
+					<executions>
+						<execution>
+							<goals>
+								<goal>clean</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+
+			</plugins>
+
+		</pluginManagement>
+
+		<plugins>
+
+			<plugin>
+				<inherited>true</inherited>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<inherited>true</inherited>
+				<artifactId>maven-source-plugin</artifactId>
+			</plugin>
+
+		</plugins>
+
+	</build>
 
 </project>
