--- a/pom.xml
+++ b/pom.xml
@@ -26,30 +26,30 @@
 		</license>
 	</licenses>
 
-	<url>https://github.com/lightblueseas/gen-tree</url>
+	<url>https://github.com/lightblueseas/${project.artifactId}</url>
 
 	<properties>
 		<!-- JOBJECT-EXTENSIONS version -->
 		<jobject-extensions.version>2.5</jobject-extensions.version>
 		<jobject-evaluate.version>${jobject-extensions.version}</jobject-evaluate.version>
 		<!-- TEST-OBJECTS version -->
-		<test-objects.version>5</test-objects.version>
+		<test-objects.version>5.0.1</test-objects.version>
 	</properties>
 
 	<scm>
-		<connection>scm:git:git:@github.com:lightblueseas/gen-tree.git</connection>
-		<developerConnection>scm:git:git@github.com:lightblueseas/gen-tree.git</developerConnection>
-		<url>git:@github.com:lightblueseas/gen-tree.git</url>
+		<connection>scm:git:git:@github.com:lightblueseas/${project.artifactId}.git</connection>
+		<developerConnection>scm:git:git@github.com:lightblueseas/${project.artifactId}.git</developerConnection>
+		<url>git:@github.com:lightblueseas/${project.artifactId}.git</url>
 	</scm>
 
 	<ciManagement>
 		<system>travis-ci</system>
-		<url>https://travis-ci.org/lightblueseas/gen-tree</url>
+		<url>https://travis-ci.org/lightblueseas/${project.artifactId}</url>
 	</ciManagement>
 
 	<issueManagement>
 		<system>github</system>
-		<url>https://github.com/lightblueseas/gen-tree/issues</url>
+		<url>https://github.com/lightblueseas/${project.artifactId}/issues</url>
 	</issueManagement>
 
 	<dependencyManagement>
