--- a/gradle.properties
+++ b/gradle.properties
@@ -39,6 +39,7 @@ lombokVersion=1.18.22
 ##############################
 # test dependencies versions #
 ##############################
+dataApiVersion=3
 testObjectsVersion=6
 jobjContractVerifierVersion=3.5
 meanbeanVersion=2.0.3
