--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,21 @@ apply plugin: "jacoco"
 apply plugin: "org.ajoberstar.grgit"
 apply plugin: "com.diffplug.spotless"
 
+dependencies {
+    compileOnly("org.projectlombok:lombok:$lombokVersion")
+    annotationProcessor("org.projectlombok:lombok:$lombokVersion")
+    implementation("io.github.astrapi69:data-api:$dataApiVersion")
+    implementation("io.github.astrapi69:id-generate:$idGenerateVersion")
+    testCompileOnly("org.projectlombok:lombok:$lombokVersion")
+    testAnnotationProcessor("org.projectlombok:lombok:$lombokVersion")
+
+    testImplementation("io.github.astrapi69:visitor:$designPatternsVersion")
+    testImplementation("org.meanbean:meanbean:$meanbeanVersion")
+    testImplementation("io.github.astrapi69:test-objects:$testObjectsVersion")
+    testImplementation("io.github.astrapi69:jobj-contract-verifier:$jobjContractVerifierVersion")
+    testImplementation("org.testng:testng:$testngVersion")
+}
+
 spotless {
 
     format "misc", {
@@ -219,14 +234,3 @@ jacocoTestReport {
 }
 
 check.dependsOn jacocoTestReport
-
-dependencies {
-    compileOnly("org.projectlombok:lombok:$lombokVersion")
-    annotationProcessor("org.projectlombok:lombok:$lombokVersion")
-    testCompileOnly("org.projectlombok:lombok:$lombokVersion")
-    testAnnotationProcessor("org.projectlombok:lombok:$lombokVersion")
-    testImplementation("org.meanbean:meanbean:$meanbeanVersion")
-    testImplementation("io.github.astrapi69:test-objects:$testObjectsVersion")
-    testImplementation("io.github.astrapi69:jobj-contract-verifier:$jobjContractVerifierVersion")
-    testImplementation("org.testng:testng:$testngVersion")
-}
