--- a/gradle.properties
+++ b/gradle.properties
@@ -36,9 +36,12 @@ spotlessGradlePluginVersion=6.3.0
 # dependencies versions #
 #########################
 lombokVersion=1.18.22
+idGenerateVersion=1
+dataApiVersion=3.2.1
 ##############################
 # test dependencies versions #
 ##############################
+designPatternsVersion=5.1
 testObjectsVersion=6
 jobjContractVerifierVersion=3.5
 meanbeanVersion=2.0.3
