--- a/gradle.properties
+++ b/gradle.properties
@@ -40,6 +40,7 @@ designPatternsVersion=5.2
 ##############################
 # test dependencies versions #
 ##############################
+sillyCollectionsVersion=18
 dataApiVersion=3.2.1
 idGenerateVersion=1
 testObjectsVersion=6
