update of test dependency silly-collections to new minor version 18.1

--- a/gradle.properties
+++ b/gradle.properties
@@ -40,7 +40,7 @@ designPatternsVersion=5.2
 ##############################
 # test dependencies versions #
 ##############################
-sillyCollectionsVersion=18
+sillyCollectionsVersion=18.1
 dataApiVersion=3.2.1
 idGenerateVersion=1
 testObjectsVersion=6
