--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 ######################
 projectVersion=6.2-SNAPSHOT
 groupPackage=io.github.astrapi69
-projectSourceCompatibility=1.8
+projectSourceCompatibility=11
 projectInceptionYear=2015
 projectHolderUsername=lightblueseas
 projectLeaderName=Asterios Raptis
@@ -25,28 +25,30 @@ projectRepositoriesReleasesRepoUrl=https://oss.sonatype.org/service/local/stagin
 projectRepositoriesSnapshotsRepoUrl=https://oss.sonatype.org/content/repositories/snapshots
 projectRepositoriesUserNameKey=ossrhUsername
 projectRepositoriesPasswordKey=ossrhPassword
+projectRepositoriesReleasesName=Sonatype Nexus Releases
+projectRepositoriesSnapshotsName=Sonatype Nexus Snapshots
 ###########################
 # gradle-plugins versions #
 ###########################
 gradlePluginVersionsVersion=0.42.0
 licenseGradlePluginVersion=0.16.1
-grgitGradlePluginVersion=4.1.1
-spotlessGradlePluginVersion=6.5.0
+grgitGradlePluginVersion=5.0.0
+spotlessGradlePluginVersion=6.10.0
 #########################
 # dependencies versions #
 #########################
 lombokVersion=1.18.24
-designPatternsVersion=5.2
+designPatternsVersion=6
 ##############################
 # test dependencies versions #
 ##############################
-sillyCollectionsVersion=18.1
+sillyCollectionVersion=20
 dataApiVersion=3.2.1
 idGenerateVersion=1
-testObjectsVersion=6
-jobjContractVerifierVersion=3.5
+testObjectVersion=7.1
+jobjContractVerifierVersion=4
 meanbeanVersion=2.0.3
-testngVersion=7.5
+testngVersion=7.6.1
 ##########################
 # for deploy on sonatype #
 ##########################
