--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 ######################
 # project properties #
 ######################
-projectVersion=7.2-SNAPSHOT
+projectVersion=7.2
 groupPackage=io.github.astrapi69
 projectSourceCompatibility=11
 projectInceptionYear=2015
-projectHolderUsername=lightblueseas
+projectHolderUsername=astrapi69
 projectLeaderName=Asterios Raptis
 slash=/
 colon=:
