--- a/gradle.properties
+++ b/gradle.properties
@@ -39,6 +39,7 @@ spotlessGradlePluginVersion=6.12.0
 #########################
 lombokVersion=1.18.24
 designPatternsVersion=6
+treeApiVersion=1.1
 ##############################
 # test dependencies versions #
 ##############################
