--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -2,6 +2,7 @@ dependencies {
     compileOnly("org.projectlombok:lombok:$lombokVersion")
     annotationProcessor("org.projectlombok:lombok:$lombokVersion")
 
+    implementation("io.github.astrapi69:tree-api:$treeApiVersion")
     implementation("io.github.astrapi69:visitor:$designPatternsVersion")
 
     testCompileOnly("org.projectlombok:lombok:$lombokVersion")
