prepare new minor release for new version 7.3

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 ######################
 # project properties #
 ######################
-projectVersion=7.3-SNAPSHOT
+projectVersion=7.3
 groupPackage=io.github.astrapi69
 projectSourceCompatibility=11
 projectInceptionYear=2015
