--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 ######################
 # project properties #
 ######################
-projectVersion=7.6-SNAPSHOT
+projectVersion=8-SNAPSHOT
 groupPackage=io.github.astrapi69
 projectSourceCompatibility=11
 projectInceptionYear=2015
