--- a/gradle.properties
+++ b/gradle.properties
@@ -48,7 +48,7 @@ sillyCollectionVersion=20.3
 idGenerateVersion=1.1
 testObjectVersion=7.2
 jobjContractVerifierVersion=4
-meanbeanVersion=2.0.3
+meanbeanVersion=3.0.0-M9
 testngVersion=7.7.1
 ##########################
 # for deploy on sonatype #
