--- a/gradle.properties
+++ b/gradle.properties
@@ -30,26 +30,28 @@ projectRepositoriesSnapshotsName=Sonatype Nexus Snapshots
 ###########################
 # gradle-plugins versions #
 ###########################
-gradlePluginVersionsVersion=0.44.0
+gradlePluginVersionsVersion=0.46.0
 licenseGradlePluginVersion=0.16.1
-grgitGradlePluginVersion=5.0.0
-spotlessGradlePluginVersion=6.13.0
+grgitGradlePluginVersion=5.2.0
+spotlessGradlePluginVersion=6.19.0
 #########################
 # dependencies versions #
 #########################
-lombokVersion=1.18.24
+lombokVersion=1.18.28
 designPatternsVersion=6
 treeApiVersion=1.2
 dataApiVersion=4.1
 ##############################
 # test dependencies versions #
 ##############################
-sillyCollectionVersion=20.3
+throwableVersion=2.3
+jobjClonerVersion=1
+sillyCollectionVersion=21
 idGenerateVersion=1.1
 testObjectVersion=7.2
 jobjContractVerifierVersion=4
 meanbeanVersion=3.0.0-M9
-testngVersion=7.7.1
+testngVersion=7.8.0
 ##########################
 # for deploy on sonatype #
 ##########################
