update to jdk version 17
- update gradle version to 8.4-rc-2
- update of lombok version to 1.18.30
- update of gradle-plugin dependency 'com.github.ben-manes.versions.gradle.plugin' to new version 0.48.0
- update of gradle-plugin dependency spotless-plugin-gradle to new minor version 6.21.0
- update of test dependency silly-collection to new major version 27

--- a/gradle/publishing.gradle
+++ b/gradle/publishing.gradle
@@ -8,6 +8,9 @@ task sourcesJar(type: Jar) {
 task javadocJar(type: Jar) {
     from javadoc
     archiveClassifier.set("javadoc")
+    javadoc {
+        failOnError = false
+    }
 }
 
 javadoc {
