added new libs.versions.toml file for new automatic catalog versions update

--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,20 +1,14 @@
 dependencies {
-    compileOnly("org.projectlombok:lombok:$lombokVersion")
-    annotationProcessor("org.projectlombok:lombok:$lombokVersion")
-
-    implementation("io.github.astrapi69:tree-api:$treeApiVersion")
-    implementation("io.github.astrapi69:data-api:$dataApiVersion")
-    implementation("io.github.astrapi69:visitor:$designPatternsVersion")
-
-    testCompileOnly("org.projectlombok:lombok:$lombokVersion")
-    testAnnotationProcessor("org.projectlombok:lombok:$lombokVersion")
-
-    testImplementation("io.github.astrapi69:throwable:$throwableVersion")
-    testImplementation("io.github.astrapi69:jobj-cloner:$jobjClonerVersion")
-    testImplementation("io.github.astrapi69:silly-collection:$sillyCollectionVersion")
-    testImplementation("io.github.astrapi69:id-generate:$idGenerateVersion")
-    testImplementation("io.github.astrapi69:test-object:$testObjectVersion")
-    testImplementation("io.github.astrapi69:jobj-contract-verifier:$jobjContractVerifierVersion")
-    testImplementation("com.github.meanbeanlib:meanbean:$meanbeanVersion")
-    testImplementation("org.testng:testng:$testngVersion")
+    compileOnly libs.lombok
+    implementation libs.tree.api
+    implementation libs.data.api
+    implementation libs.visitor
+    testImplementation libs.throwable
+    testImplementation libs.jobj.cloner
+    testImplementation libs.silly.collection
+    testImplementation libs.id.generate
+    testImplementation libs.test.object
+    testImplementation libs.jobj.contract.verifier
+    // Note: use of bundles...
+    testImplementation libs.bundles.unit.testing
 }
