update gradle version to 8.10
- update of lombok version to 1.18.34
- replace of old dependency visitor with new dependency visitor-pattern

--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -7,7 +7,8 @@ dependencies {
 
     implementation libs.tree.api
     implementation libs.data.api
-    implementation libs.visitor
+    implementation libs.visitor.pattern
+
     testImplementation libs.throwable
     testImplementation libs.jobj.cloner
     testImplementation libs.silly.collection
