added repository to the repositories.gradle file

--- a/gradle/repositories.gradle
+++ b/gradle/repositories.gradle
@@ -1,6 +1,16 @@
 repositories {
     mavenLocal()
     mavenCentral()
+    /**
+     * This repository is for jobj-contract-verifier release versions
+     **/
+    maven {
+        name = "github jobj-contract-verifier releases"
+        url "https://github.com/astrapi69/jobj-contract-verifier/raw/master/releases"
+    }
+    /**
+     * This repository is intended for release versions
+     **/
     maven {
         name "$projectRepositoriesReleasesName"
         url "$projectRepositoriesReleasesRepoUrl"
@@ -8,6 +18,10 @@ repositories {
             releasesOnly()
         }
     }
+    /**
+     * This repository is intended for snapshot versions that are previously deployed
+     * on the specified url for snapshots
+     **/
     maven {
         name "$projectRepositoriesSnapshotsName"
         url "$projectRepositoriesSnapshotsRepoUrl"
