prepare new minor release in version 10.1

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,9 +34,14 @@ visitor-pattern = { module = "io.github.astrapi69:visitor-pattern", version.ref 
 
 [bundles]
 unit-testing = [
+    "id-generate",
+    "jobj-cloner",
+    "jobj-contract-verifier",
     "meanbean",
+    "silly-collection",
     "test-object",
     "testng",
+    "throwable",
 ]
 
 [plugins]
