--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 ######################
 # project properties #
 ######################
-projectVersion=10.1
+projectVersion=11.0-SNAPSHOT
 groupPackage=io.github.astrapi69
-projectSourceCompatibility=17
+projectSourceCompatibility=21
 projectInceptionYear=2015
 projectHolderUsername=astrapi69
 projectLeaderName=Asterios Raptis
